# rust-training

./: Cargo.toml  README.md
.cargo/: config.toml
p12/src/: main.rs
p22/benches/: mod.rs
p22/src/: calc.rs  figures.rs  lib.rs  song.rs
p22/tests/: mod.rs
p24/src/: main.rs  refs.rs
p32/src/: bank.rs  lib.rs  shapes.rs
p34/src/: lib.rs
p42/src/: bank.rs  lib.rs  song.rs
p72/: Cargo.toml
p72/src/: lib.rs
p72/src/txt/: ciphertext.txt
project/: Cargo.toml
project/src/: drat.rs  lib.rs
